[project]
name = "i2vchainhelper"
description = "Helps filter and trim image batches for I2V chaining by ensuring consistent face identity and eye openness."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "torchvision", "numpy", "Pillow", "insightface", "scipy", "opencv-python"]

[project.urls]
Repository = "https://github.com/room3dev/ComfyUI-I2VChainHelper"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/room3dev/ComfyUI-I2VChainHelper/wiki"
"Bug Tracker" = "https://github.com/room3dev/ComfyUI-I2VChainHelper/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-I2VChainHelper"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

